# Clinic

./: .gitignore  commandes_git.txt  delete_migrations.sh  dev_update.sh  pyproject.toml  requirements.txt  update.sh
ie_app/: apps.py  resources.py  urls.py  views.py
ie_app/templates/: import.html
parameter/: apparatus.py  forms.py  models.py  urls.py  views.py
parameter/templates/: detail-parameter.html  list-collection.html  list-parameter.html
web/: .env.template  cmodels.py  constants.py  context_processors.py  decorators.py  errors_views.py  mails.py  middlewares.py  settings.py  urls.py  views.py
web/static/css/: all-themes.css  common.min.css  extra_pages.css  import_base.css  scroll_card2.css  searchbar.css  style.css  style.css.map
web/static/js/: main.js  mycharts.js
web/templates/: base.html  index.html  index2.html  liste_articles.html
web/templates/components/: alert.html  footer.html  formset-button.html  header.html  list-options.html  searchbar.html  searchbar3.html  sidebar.html  stat-card.html  toolbar.html
web/templates/errors/: 400.html  403.html  404.html  500.html  base.html
web/templates/includes/: email.html
web/templates/models/: delete.html  detail.html  form.html  list-tabs-advancement.html  list-tabs-chancellery.html  list-tabs-reconversion.html  list-tabs-training.html  list-tabs-workforce-suspend.html  list-tabs-workforce.html  list.html  paginates.html
xauth/: admin.py  apps.py  charts.py  filters.py  forms.py  models.py  signals.py  urls.py  views.py
xauth/management/commands/: populate.py
(+17 files in other folders)
